@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-30T00:41:35Z",
-  "count_outdated" : 1365,
-  "uniques_outdated" : 738,
-  "count" : 1391,
-  "uniques" : 753,
+  "timestamp" : "2023-09-30T08:10:38Z",
+  "count_outdated" : 1366,
+  "uniques_outdated" : 739,
+  "count" : 1392,
+  "uniques" : 754,
   "clones" : [
-    {
-      "timestamp": "2023-09-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-17T00:00:00Z",
       "count": 1,
@@ -127,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
