@@ -1,12 +1,7 @@
 {
   "count": 26,
-  "uniques": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2023-09-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-09-17T00:00:00Z",
       "count": 1,
@@ -70,6 +65,11 @@
     {
       "timestamp": "2023-09-29T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-30T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
