@@ -1,3 +1,12 @@
+2023-09-30T08:10:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6361437276 # 1947
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 738 1365 / 753 1391
+* notice: next accum: outdated-unq outdated-all / unq all: 739 1366 / 754 1392
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2023-09-16] / [2023-09-30]
+
 2023-09-30T00:41:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6358808298 # 1946
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-30
